@@ -5,7 +5,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.hc.client5.http.classic.methods.HttpUriRequestBase;
 import org.apache.hc.core5.http.Header;
@@ -20,7 +19,7 @@ public class MockedApache5RestResponse<T> extends MockedRestResponse<T>
 {
     private final GenericType<T> responseType;
     private final HttpUriRequestBase request;
-    private String requestBody;
+    private final String requestBody;
 
     public MockedApache5RestResponse(GenericType<T> responseType, HttpUriRequestBase request)
     {
@@ -76,7 +75,7 @@ public class MockedApache5RestResponse<T> extends MockedRestResponse<T>
             return Collections.emptyList();
         }
 
-        return Arrays.stream(headers).map(Header::getValue).collect(Collectors.toList());
+        return Arrays.stream(headers).map(Header::getValue).toList();
     }
 
     @Override
